--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,11 @@
+* {
+  font-family: 'Poppins', sans-serif;
+}
+
+body {
+  font-family: 'Poppins', sans-serif;
+}
+
 #root {
   max-width: 1280px;
   margin: 0 auto;
